Simulatior, Extended Runtime Calls

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_library(vixl STATIC
+set(VIXL_SOURCES 
   code-buffer-vixl.cc
   compiler-intrinsics-vixl.cc
   cpu-features.cc
@@ -17,8 +17,21 @@ add_library(vixl STATIC
   aarch64/registers-aarch64.cc
 )
 
+### TODO _M_X86_64
+list(APPEND VIXL_SOURCES
+  aarch64/decoder-aarch64.cc
+  aarch64/simulator-aarch64.cc
+  aarch64/cpu-features-auditor-aarch64.cc
+  aarch64/disasm-aarch64.cc
+)
+
+add_library(vixl STATIC ${VIXL_SOURCES})
+
 # This is only refrenced by .cc files, so it can be private
 target_compile_definitions(vixl PRIVATE -DVIXL_CODE_BUFFER_MMAP=1)
+
+### TODO _M_X86_64
+target_compile_definitions(vixl PRIVATE -DVIXL_INCLUDE_SIMULATOR_AARCH64)
 
 # These are refrenced by all the .h files
 # we need to export them as public so any target linking vixl
